# ruxos

./: Cargo.toml  Makefile
api/arceos_api/src/imp/: fs.rs
api/ruxos_posix_api/: Cargo.toml
api/ruxos_posix_api/src/: lib.rs
api/ruxos_posix_api/src/imp/pthread/: futex.rs  mod.rs
api/ruxos_posix_api/src/imp/pthread/futex/: mod.rs  syscall.rs  types.rs
apps/c/cpptest/: axbuild.mk  main.cpp
crates/axerrno/src/: lib.rs
crates/axfs_vfs/src/: lib.rs
crates/axio/src/: lib.rs
crates/axio/src/buffered/: bufreader.rs  bufwriter.rs  mod.rs
crates/linked_list/src/: linked_list.rs  unsafe_list.rs
crates/percpu/src/: imp.rs  lib.rs  naive.rs
crates/percpu_macros/src/: arch.rs  lib.rs  naive.rs
crates/scheduler/src/: cfs.rs  fifo.rs  round_robin.rs
crates/spinlock/src/: base.rs
modules/axsync/: Cargo.toml
modules/axsync/src/: lib.rs
modules/axsync/src/futex/: mod.rs  syscall.rs  types.rs
modules/ruxfs/src/: root.rs
modules/ruxfs/src/api/: dir.rs
modules/ruxhal/src/: cpu.rs  lib.rs
modules/ruxhal/src/arch/riscv/: trap.rs
modules/ruxruntime/: Cargo.toml
modules/ruxruntime/src/: lib.rs
modules/ruxtask/src/: api.rs  lib.rs  loadavg.rs  run_queue.rs  task.rs  timers.rs  wait_queue.rs
scripts/make/: build_c.mk  build_musl.mk  qemu.mk
scripts/prebuild/: riscv64.mk
ulib/axstd/src/fs/: dir.rs  mod.rs
ulib/axstd/src/io/: mod.rs
ulib/ruxmusl/: .gitignore
ulib/ruxmusl/src/aarch64/: mod.rs
ulib/ruxmusl/src/riscv64/: __unmapself.s  clone.s  mod.rs  restore.s  syscall_arch.h  syscall_arch_copy.h  syscall_cp.s
