[package]
name = "axsync"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS synchronization primitives"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axsync"
documentation = "https://rcore-os.github.io/arceos/axsync/index.html"

[features]
multitask = ["ruxtask/multitask"]
default = []

[dependencies]
log = "0.4"

ruxtask = { path = "../ruxtask" }
ruxconfig = { path = "../ruxconfig" }
axerrno = { path = "../../crates/axerrno" }

spinlock = { path = "../../crates/spinlock" }
lazy_init = { path = "../../crates/lazy_init" }

[dev-dependencies]
rand = "0.8"
axsync = { path = ".", features = ["multitask"] }
ruxtask = { path = "../ruxtask", features = ["test"] }
memory_addr = { path = "../../crates/memory_addr" }
